--- a/configs/default_defconfig
+++ b/configs/default_defconfig
@@ -693,3 +693,6 @@ CONFIG_DEBUG_RX_RING_BUFFER := y
 CONFIG_RX_HASH_DEBUG := y
 
 CONFIG_WLAN_HANG_EVENT := y
+
+# Disable packet logging to stop wasting memory
+CONFIG_SLUB_MEM_OPTIMIZE := y
